# SoundplaneLite

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  DEVNOTES.md  README.md  xenomai.wrappers
splite/: CMakeLists.txt  SPLiteDevice.cpp  SPLiteDevice.h  SpliteModel.cpp  SpliteModel.h  Zone.cpp  Zone.h
splite-salt/: render.cpp  settings.json  splayout.h  splayout_1.h  splayout_2.h  splayout_4.h  splayout_4xy.h  sptouch.h
splite/splib/: LibusbSoundplaneDriver.cpp  LibusbSoundplaneDriver.h  MacSoundplaneDriver.h  SensorFrame.cpp  ThreadUtility.cpp  TouchTracker.cpp  TouchTracker.h  Unpacker.h
splite/tests/: CMakeLists.txt  soundplanetest.cpp  splitedevtest.cpp  touchtrackertest.cpp
splite_bela/: render.cpp  settings.json
splite_salt/: belaio.h  render.cpp  splayout.h  splayout_1.h  splayout_2.h  splayout_4.h  splayout_4xy.h  splite_salt  sptouch.h
tests/: CMakeLists.txt  soundplanetest.cpp  touchtrackertest.cpp
